--- a/Milage Calculator/main/res/layout/activity_history.xml
+++ b/Milage Calculator/main/res/layout/activity_history.xml
@@ -1,21 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/ll"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent">
+    android:background="@color/colorPrimaryDark"
+    android:backgroundTint="#000C0C0C">
+    <ScrollView
+        android:background="@color/colorPrimaryDark"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
     <LinearLayout
+        android:background="@color/colorPrimaryDark"
+        android:id="@+id/linearLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:id="@+id/linearLayout">
+        android:orientation="vertical">
+
         <TextView
+            android:id="@+id/tv"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/tv"/>
+            android:layout_height="wrap_content" />
+
         <TableLayout
             android:id="@+id/tablelayout"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
-        </TableLayout>
+            android:layout_height="wrap_content"></TableLayout>
+
+        <LinearLayout
+            android:background="@color/colorPrimaryDark"
+            android:id="@+id/linearLayout1"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+            <Button
+                android:id="@+id/delete"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="DELETE" />
+        </LinearLayout>
     </LinearLayout>
-</ScrollView>
+    </ScrollView>
+</LinearLayout>
